style.css
.list-profiles-title {
    text-align: center;
}

.filter-container-input {
    width: inherit;
    padding: 8px;
}

.data-not-found-center-text, .filter-container {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    width: 80%; 
    justify-content: center;
}

.data-not-found-center-text {
    padding-top: 10px;
}

.list-profiles-container {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    width: 80%; 
    /* Responsive for width */
}
.list-profiles-container .profile-information {
    width: 33%;
    /* Responsive for width to set number of columns for Tablet, mobile */
    height: 12rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.list-profiles-container .profile-information .profile-avatar-information-container {
    /* Border of each profile */
    border: 2px solid rgb(229, 225, 225);
    background-color: rgb(239, 239, 239);
    height: 80%;
    width: 95%;
    display: flex;
    border-radius: 10px;
}

.list-profiles-container .profile-information .profile-avatar-information-container .avatar {
    width: 28%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.avatar .avatar-image {
    border: 2px solid rgb(229, 225, 225);
    background-color: #fff;
    width: 90%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    border-radius: 50%;
}

.list-profiles-container .profile-information .profile-avatar-information-container .information {
    width: 72%;
    margin: auto 0.2rem;
}

.information .information-name {
    font-weight: bold;
    font-size: 20px;
}


.information .information-bio {
    padding-top: 8px;
}

/* Pagination bar */

.pagination {
    /* display: inline-block; */
    display: flex;
    justify-content: center;
}
  
.pagination a {
    color: black;
    float: left;
    padding: 8px 16px;
    text-decoration: none;
    transition: background-color .3s;
    border: 1px solid #ddd;
}

.pagination a.active {
    background-color: #4CAF50;
    color: white;
    border: 1px solid #4CAF50;
}
  
.pagination a:hover:not(.active) {
    background-color: #ddd;
}

.pagination-pointer {
    cursor: pointer;
}

@media only screen and (max-width: 1024px) {
    .list-profiles-container {
        width: 90%;
    }
    
    .list-profiles-container .profile-information {
        width: 50%;
    }
    
    .data-not-found-center-text, .filter-container {
        width: 90%;
    }
}

@media only screen and (max-width: 431px) {
    .list-profiles-container .profile-information {
        width: 100%;
    }
    .pagination a {
        padding: 5px 10px;
    }
}

